--- a/test.tex
+++ b/test.tex
@@ -9,7 +9,7 @@
 \usepackage{titlesec}
 \usepackage[table]{xcolor}
 %结构化
-\graphicspath{{./pic/chapter1/}{./pic/chapter2/}{./pic/chapter3/}{./pic/example/}}
+\graphicspath{{./figure/}}
 \usepackage{subfiles}
 \usepackage{blindtext}
 \usepackage{listings}%设置C风格代码格式
