修改文件布局

--- a/book.tex
+++ b/book.tex
@@ -83,9 +83,10 @@
 \lstset{style=mystyle}
  
 \include{./chapter1/deeplearning}
-\include{./chapter2/program}
-\include{./chapter2/tf_advance}
+\include{./chapter2/getstarted}
+\include{./chapter2/programmer}
 \include{./chapter2/tutorials}
+\include{./chapter2/mobile}
 \include{./chapter2/extend}
 \include{./chapter2/performance}
 \include{./chapter3/common_module}
